--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: 'Setup Terraform'
 description: 'Install a specific version of terraform CLI binary. Acceptable values are latest or any semantic version string like 1.0.0'
 inputs:
-  version:
+  terraform_version:
     description: 'Version of terraform CLI'
     required: true
     default: 'latest'
